force-app/main/default/objects/ATS_Flow_Field_Sets__mdt/ATS_Flow_Field_Sets__mdt.object-meta.xml
<CustomObject>
    <label>ATS Flow Field Sets</label>
    <pluralLabel>ATS Flow Field Sets</pluralLabel>
</CustomObject>