force-app/main/default/objects/ATS_Flow_Field_Sets__mdt/fields/Field_Set__c.field-meta.xml
<CustomField>
    <fullName>Field_Set__c</fullName>
    <label>Field Set</label>
    <length>255</length>
    <type>Text</type>
</CustomField>