force-app/main/default/objects/ATS_Flow_Field_Sets__mdt/fields/Opco__c.field-meta.xml
<CustomField>
    <fullName>Opco__c</fullName>
    <label>Opco</label>
    <length>255</length>
    <type>Text</type>
</CustomField>