force-app/main/default/objects/ATS_Flow_Field_Sets__mdt/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>